# blog-rag

./: .gitignore  README.md  main.py  pyproject.toml  vector_query.py
collector/: README.md
prompts/: rag_prompts.yaml
serving/: api_router.py  gradio_app.py  rag_service.py
